--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
     </header>
     
-    <img class="logo" src="https://th.bing.com/th/id/OIG.yhCMd_AtxxrZxacTqSVO?pid=ImgGn" alt="Logo da Calculadora">
+    <img class="logo" src="https://raw.githubusercontent.com/Luann8/App-Bhaskara/main/OIG%20(1).jpg" alt="Logo da Calculadora">
     <div class="container">
         <!-- Abas de Navegação -->
         <div class="nav-tabs">
